Mod. para ver imgs en prod 1.3

--- a/muebles/templates/index.html
+++ b/muebles/templates/index.html
@@ -11,6 +11,7 @@
                     <a href="#" title=""><img src="/media/{{ picturescat.imagen_categoria }}"></a> 
                     -->
                     {% thumbnail picturescat.imagen_categoria "1800x600" as imagendecategoria %}
+                        {% empty %}
                         <img src="{{ imagendecategoria.url }}" alt="">
                     {% endthumbnail %}
                 </div>
