--- a/muebles/templates/index.html
+++ b/muebles/templates/index.html
@@ -7,14 +7,12 @@
         <div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
             {% for picturescat in  pictures_fpss %}
                 <div class="intro-item" style="background-image">
+                    <a href="#" title=""><img src="{{ picturescat.imagen_categoria }}"></a> 
                     <!-- 
-                    <a href="#" title=""><img src="/media/{{ picturescat.imagen_categoria }}"></a> 
-                    -->
-                    {% thumbnail picturescat.imagen_categoria "1800x600" as imagendecategoria %}
+                    {"""% thumbnail picturescat.imagen_categoria "1800x600" as imagendecategoria %"""}
                             <img src="{{ imagendecategoria.url }}" alt="">
-                        {% empty %}
-                            <p>NO IMAGEN</p>
-                    {% endthumbnail %}
+                    {"""% endthumbnail %"""}
+                    -->
                 </div>
             {% endfor %}
         </div><!-- intro -->
